# scran.js

./: .gitignore  .gitmodules  .npmignore  .npmrc  CMakeLists.txt  Dockerfile  NEWS.md  README.md  build.node.sh  build.sh  build_all.sh  jest.config.js  package-lock.json  package.gpr.json  package.json
.github/workflows/: build-blacklists.yaml  build-docs.yaml  build-wasm.yaml  check-rds.yaml  doxygenate.yaml  publish-docker.yaml  publish-gpr.yaml  publish-npm.yaml  run-tests.yaml  test-library.yaml
demo/: index.html
docs/: AggregateAcrossCellsResults.html  ArrayCollection.js.html  BuildLabelledReferenceResults.html  BuildNeighborSearchIndexResults.html  BuildSNNGraphResults.html  BuildSnnGraphResults.html  BuiltLabelledReference.html  ClusterKmeansResults.html  ClusterLeidenResults.html  ClusterMultilevelResults.html  ClusterSNNGraphLeidenResults.html  ClusterSNNGraphMultiLevelResults.html  ClusterSNNGraphWalktrapResults.html  ClusterSnnGraphLeidenResults.html  ClusterSnnGraphMultiLevelResults.html  ClusterSnnGraphWalktrapResults.html  ClusterWalktrapResults.html  FindNearestNeighborsResults.html  Float32WasmArray.html  Float64WasmArray.html  H5Base.html  H5CompoundType.html  H5DataSet.html  H5EnumType.html  H5File.html  H5Group.html  H5StringType.html  InitializeTSNEResults.html  InitializeUMAPResults.html  Int16WasmArray.html  Int32WasmArray.html  Int8WasmArray.html  IntegrateCellLabelsResults.html  IntegrateLabelCellsResults.html  IntegrateLabelledReferencesResults.html  IntegratedLabelCellsReferences.html  IntegratedLabelledReferences.html  JSVector_8h.html  JSVector_8h__dep__incl.map  JSVector_8h__dep__incl.md5  (+245 more)
docs/related/: cell_type_annotation.md  developer_notes.md  kmeans_clustering.md  memory_management.md  row_permutations.md  termination.md
docs/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_8.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  (+9 more)
docs/wasm/: JSVector_8h.html  JSVector_8h__dep__incl.map  JSVector_8h__dep__incl.md5  JSVector_8h__incl.map  JSVector_8h__incl.md5  JSVector_8h_source.html  NeighborIndex_8cpp.html  NeighborIndex_8cpp__incl.map  NeighborIndex_8cpp__incl.md5  NeighborIndex_8h.html  NeighborIndex_8h__dep__incl.map  NeighborIndex_8h__dep__incl.md5  NeighborIndex_8h__incl.map  NeighborIndex_8h__incl.md5  NeighborIndex_8h_source.html  NumericMatrix_8cpp.html  NumericMatrix_8cpp__incl.map  NumericMatrix_8cpp__incl.md5  NumericMatrix_8h.html  NumericMatrix_8h__dep__incl.map  NumericMatrix_8h__dep__incl.md5  NumericMatrix_8h__incl.map  (+289 more)
js/: ArrayCollection.js  HDF5Reader.js  Module.js  MultiMatrix.js  ScranMatrix.js  SparseMatrix.js  WasmArray.js  WasmBuffer.js  aggregateAcrossCells.js  annotateCells.js  blacklists.js.R  block.js  buildNeighborSearchIndex.js  buildSNNGraph.js  buildSnnGraph.js  cbind.js  chooseHVGs.js  chooseHvgs.js  clusterGraph.js  clusterKmeans.js  clusterSNNGraph.js  clusterSnnGraph.js  computeClrm1Factors.js  computePerCellAdtQcFilters.js  computePerCellAdtQcMetrics.js  computePerCellQCFilters.js  computePerCellQCMetrics.js  delayed.js  factorize.js  features.js  file.js  filterCells.js  findNearestNeighbors.js  gc.js  groupedSizeFactors.js  guessFeatures.js  hdf5.js  hypergeometricTest.js  index.js  initializeMatrixFromArrays.js  (+47 more)
misc/: preamble.js
src/: FileWorker.js  JSVector.h  NeighborIndex.cpp  NeighborIndex.h  NumericMatrix.cpp  NumericMatrix.h  PerCellAdtQcMetrics_Results.h  PerCellQCMetrics_Results.h  aggregate_across_cells.cpp  build_snn_graph.cpp  build_snn_graph.h  cbind.cpp  cluster_graph.cpp  cluster_kmeans.cpp  cluster_snn_graph.cpp  compute_clrm1_factors.cpp  delayed.cpp  filter_cells.cpp  get_error_message.cpp  grouped_size_factors.cpp  hdf5_utils.cpp  hypergeometric_test.cpp  index.html  index.js  initialize_from_arrays.cpp  initialize_from_hdf5.cpp  initialize_from_mtx.cpp  initialize_from_rds.cpp  initialize_sparse_matrix.cpp  log_norm_counts.cpp  matrix_stats.cpp  median_size_factors.cpp  mnn_correct.cpp  model_gene_var.cpp  model_gene_variances.cpp  normalize_counts.cpp  parallel.cpp  parallel.h  per_cell_adt_qc_filters.cpp  per_cell_adt_qc_metrics.cpp  (+28 more)
tests/: ArrayCollection.test.js  MultiMatrix.test.js  aggregateAcrossCells.test.js  block.test.js  buildNeighborSearchIndex.test.js  buildSNNGraph.test.js  cbind.test.js  chooseHVGs.test.js  chooseHvgs.test.js  clusterGraph.test.js  clusterKmeans.test.js  clusterSNNGraph.test.js  clusterSnnGraph.test.js  compare.js  computeClrm1Factors.test.js  computePerCellAdtQcFilters.test.js  computePerCellAdtQcMetrics.test.js  computePerCellQCFilters.test.js  computePerCellQCMetrics.test.js  delayed.test.js  factorize.test.js  features.test.js  file.test.js  filterCells.test.js  findNearestNeighbors.test.js  groupedSizeFactors.test.js  hdf5.test.js  hypergeometricTest.test.js  initializeMatrixFromHdf5.test.js  initializeScranMatrixFromArrays.test.js  initializeScranMatrixFromHdf5.test.js  initializeScranMatrixFromMatrixMarket.test.js  initializeSparseMatrix.test.js  initializeSparseMatrixFromArrays.test.js  initializeSparseMatrixFromHDF5.test.js  initializeSparseMatrixFromHDF5Buffer.test.js  initializeSparseMatrixFromHdf5.test.js  initializeSparseMatrixFromMatrixMarket.test.js  labelCells.test.js  logNormCounts.test.js  (+33 more)
wasm/: CMakeLists.txt  scran.js  scran.worker.js
wasm/src/: JSVector.h  NumericMatrix.cpp  NumericMatrix.h  bindings.cpp  cluster_snn_graph.cpp  log_norm_counts.cpp  model_gene_var.cpp  per_cell_qc_filters.cpp  per_cell_qc_metrics.cpp  read_matrix_market.cpp  run_pca.cpp  run_tsne.cpp  run_umap.cpp  score_markers.cpp  target.cpp  utils.h
wasm/src/testing/: blah.sh  index.html
wasm_node/: scran.js  scran.wasm  scran.worker.js
(+125 files in other folders)
